--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "private": true,
   "name": "foundryvtt-mountup",
-  "version": "3.2.1",
+  "title": "FoundryVTT Mount Up!",
   "description": "Allows tokens to carry or be carried by other tokens. This is completely system agnostic, and fully customizable to fit right into your game.",
+  "version": "3.2.2",
   "scripts": {
     "package": "gulp package",
     "build": "gulp build && gulp link",
     "build:watch": "gulp watch",
     "clean": "gulp clean && gulp link --clean",
-    "update": "npm install --save-dev @league-of-foundry-developers/foundry-vtt-types@fvtt-0.8.8",
+    "update": "npm install --save-dev @league-of-foundry-developers/foundry-vtt-types@fvtt-0.8.9",
     "lint": "eslint --ext .ts,.js,.vue .",
     "lintfix": "eslint --fix --ext .ts,.js,.vue ./src",
     "prettier-format": "prettier --config .prettierrc --write \"./src/**/*.(ts|js|json|scss|css)\""
@@ -16,8 +17,8 @@
   "author": "",
   "license": "",
   "devDependencies": {
-    "@league-of-foundry-developers/foundry-vtt-types": "^0.8.8-9",
-    "@types/jquery": "^3.5.8",
+    "@league-of-foundry-developers/foundry-vtt-types": "^0.8.9-10",
+    "@types/jquery": "^3.5.9",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "@typhonjs-fvtt/eslint-config-foundry.js": "^0.8.0",
@@ -27,8 +28,8 @@
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-jquery": "^3.0.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-tsdoc": "^0.2.14",
     "fs-extra": "^9.1.0",
@@ -38,11 +39,12 @@
     "gulp-git": "^2.10.1",
     "gulp-less": "^4.0.1",
     "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.1.3",
     "gulp-sass": "^4.1.1",
     "gulp-typescript": "^6.0.0-alpha.1",
     "json-stringify-pretty-compact": "^2.0.0",
-    "prettier": "^2.4.1",
-    "sass": "^1.43.4",
+    "prettier": "^2.5.0",
+    "sass": "^1.44.0",
     "yargs": "^15.4.1"
   },
   "lint-staged": {
@@ -50,6 +52,6 @@
     "*.(json|scss)": "prettier --write"
   },
   "dependencies": {
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.2"
   }
 }
