--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "foundryvtt-mountup",
   "title": "FoundryVTT Mount Up!",
   "description": "Allows tokens to carry or be carried by other tokens. This is completely system agnostic, and fully customizable to fit right into your game.",
-  "version": "3.2.20",
+  "version": "3.2.21",
   "scripts": {
     "package": "gulp package",
     "build": "gulp build && gulp link",
@@ -52,6 +52,7 @@
     "*.(json|scss)": "prettier --write"
   },
   "dependencies": {
+    "prettier-format": "^3.1.0",
     "typescript": "^4.6.3"
   }
 }
